Create general page structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 </head>
 
 <body>
+    <header>
+        <!-- Header -->
+        Header
+    </header>
+    <main>
+        <!-- Main -->
+        Main Content
+    </main>
+    <footer>
+        <!-- Footer -->
+        Footer
+    </footer>
 
 </body>
 
