add: logo to header, apply: oswald font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
     <header>
         <!-- Header -->
-        Header
+        <header>
+            <a href="index.html"><h1 id="logo">Love Running</h1></a>
+        </header>
     </header>
     <main>
         <!-- Main -->
