--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@
 <body>
     <header>
         <!-- Header -->
-        <header>
             <a href="index.html"><h1 id="logo">Love Running</h1></a>
-        </header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="">Sign Up</a>
+                    </li>
+                </ul>
+            </nav>
     </header>
     <main>
         <!-- Main -->
