--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Header -->
             <a href="index.html"><h1 id="logo">Love Running</h1></a>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li>
                         <a href="">Home</a>
                     </li>
