--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="">Home</a>
+                        <a href="" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="">Gallery</a>
+                        <a href="" class="active">Gallery</a>
                     </li>
                     <li>
-                        <a href="">Sign Up</a>
+                        <a href="" class="active">Sign Up</a>
                     </li>
                 </ul>
             </nav>
