--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a href="" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="" class="active">Gallery</a>
+                        <a href="">Gallery</a>
                     </li>
                     <li>
-                        <a href="" class="active">Sign Up</a>
+                        <a href="">Sign Up</a>
                     </li>
                 </ul>
             </nav>
