--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-     <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -14,28 +15,30 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
         <!-- Header -->
-            <a href="index.html"><h1 id="logo">Love Running</h1></a>
-            <input type="checkbox" id="nav-toggle" name="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label">X</label>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="">Sign Up</a>
-                    </li>
-                </ul>
-            </nav>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                </li>
+                <li>
+                    <a href="">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <!-- Main -->
@@ -43,8 +46,16 @@
     </main>
     <footer>
         <!-- Footer -->
-        Footer
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Facebook page
+                    (Opens in new tab)><i class="fa-brands fa-facebook"></i></a>
+            </li>
+        </ul>
     </footer>
+
+    <!-- Font Awesome Kit! -->
+    <script src="https://kit.fontawesome.com/d17dbf40bb.js" crossorigin="anonymous"></script>
 
 </body>
 
