--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li>
@@ -50,6 +50,18 @@
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Facebook page
                     (Opens in new tab)><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="" Visit our X page
+                    (Opens in new tab)><i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our YouTube page
+                    (Opens in new tab)><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Instagram page
+                    (Opens in new tab)><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
