--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
     <footer>
         <!-- Footer -->
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Facebook page
                     (Opens in new tab)><i class="fa-brands fa-facebook"></i></a>
