--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Main -->
     <main>
-        <!-- Main -->
-        Main Content
+        <section id="hero">
+
+        </section>
     </main>
     <footer>
         <!-- Footer -->
