--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     <!-- Main -->
     <main>
         <section id="hero">
-
+            <div id="cover-text">
+                <h2>Love running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
         </section>
     </main>
     <footer>
