--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,21 @@
     </header>
     <main>
         <!-- Main -->
-        Main Content
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
     </main>
     <footer>
         <!-- Footer -->
@@ -52,16 +66,16 @@
                     (Opens in new tab)><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="" Visit our X page
-                    (Opens in new tab)><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="" Visit our X page (Opens in new
+                    tab)><i class="fa-brands fa-x-twitter"></i></a>
             </li>
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our YouTube page
                     (Opens in new tab)><i class="fa-brands fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Instagram page
-                    (Opens in new tab)><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Instagram
+                    page (Opens in new tab)><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
