Started signup page

--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <!-- Main -->
-        Main Content
+        <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
     </main>
     <footer>
         <!-- Footer -->
