--- a/index.html
+++ b/index.html
@@ -135,20 +135,20 @@
         <!-- Footer -->
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Facebook page
-                    (Opens in new tab)><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page
+                    (Opens in new tab)""><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="" Visit our X page
-                    (Opens in new tab)><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page
+                    (Opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our YouTube page
-                    (Opens in new tab)><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page
+                    (Opens in new tab)""><i class="fa-brands fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="" Visit our Instagram page
-                    (Opens in new tab)><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page
+                    (Opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
