further footer error fixes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page
-                    (Opens in new tab)""><i class="fa-brands fa-facebook"></i></a>
+                    (Opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="https://www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page
@@ -144,7 +144,7 @@
             </li>
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page
-                    (Opens in new tab)""><i class="fa-brands fa-youtube"></i></a>
+                    (Opens in new tab)"><i class="fa-brands fa-youtube"></i></a>
             </li>
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page
